Fix bug where fill bucket leaves gap at bottom of screen, fix bug where fill would not fill in a color if it was slightly similar to another color

--- a/final-project/static/css/styles.css
+++ b/final-project/static/css/styles.css
@@ -222,6 +222,13 @@ body {
 	grid-column: 2;
 	background-color: white;
 	border: 2px solid black;
+	box-sizing: border-box;
+}
+
+.draw-canvas {
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 .play-chat {
